added file upload in ticket,local system only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic==2.10.4",
     "pyjwt>=2.11.0",
     "python-dotenv==1.2.1",
+    "python-multipart>=0.0.22",
     "sqlalchemy==2.0.19",
     "uvicorn==0.34.0",
 ]
