--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pyjwt>=2.11.0",
     "python-dotenv==1.2.1",
     "python-multipart>=0.0.22",
+    "sendgrid>=6.12.5",
     "sqlalchemy==2.0.19",
     "uvicorn==0.34.0",
 ]
